# airflow

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
local/: docker-compose.yml
local/postgres_data/base/1/: 2619
local/postgres_data/base/13468/: pg_internal.init
local/postgres_data/global/: pg_control  pg_internal.init
local/postgres_data/pg_stat/: db_0.stat  db_13468.stat  global.stat
