[tool.poetry]
name = "airflow-docker"
version = "0.1.0"
description = "Apache Airflow Docker"
authors = ["Lucas"]
license = "MIT"

[tool.poetry.dependencies]
apache-airflow = "2.7.3"
python = "3.9.0"
Flask = "2.2.5"
SQLAlchemy = "1.4.50"
apache-airflow-providers-airbyte = "3.4.0"
apache-airflow-providers-alibaba = "2.6.0"
apache-airflow-providers-amazon = "8.10.0"
apache-airflow-providers-apache-cassandra = "3.3.0"
apache-airflow-providers-apache-spark = "4.3.0"
apache-airflow-providers-celery = "3.4.1"
apache-airflow-providers-cncf-kubernetes = "7.8.0"
apache-airflow-providers-databricks = "4.7.0"
apache-airflow-providers-datadog = "3.4.0"
apache-airflow-providers-dbt-cloud = "3.4.0"
apache-airflow-providers-slack = "8.3.0"
backoff = "1.10.0"
bcrypt = "4.0.1"
beautifulsoup4 = "4.12.2"
billiard = "4.1.0"
bitarray = "2.8.2"
black = "23.10.1"
boto3 = "1.28.64"
botocore = "1.31.64"
cassandra-driver = "3.28.0"
cattrs = "23.1.2"
celery = "5.3.4"
marshmallow-oneofschema = "3.0.1"
marshmallow-sqlalchemy = "0.26.1"
marshmallow = "3.20.1"
pandas-gbq = "0.19.2"
pandas = "2.1.2"
psycopg2-binary = "2.9.9"
redis = "4.6.0"
redshift-connector = "2.0.915"
requests-file = "1.5.1"
requests-kerberos = "0.14.0"
requests-mock = "1.11.0"
requests-ntlm = "1.2.0"
requests-oauthlib = "1.3.1"
requests-toolbelt = "1.0.0"
requests = "2.31.0"
responses = "0.23.3"
six = "1.16.0"
slack-sdk = "3.23.0"
tableauserverclient = "0.25"
unicodecsv = "0.14.1"
uritemplate = "4.1.1"
urllib3 = "1.26.18"
userpath = "1.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"