[tool.poetry]
name = "airflow"
version = "0.1.0"
description = "Apache Airflow Docker"
authors = ["Lucas"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
apache-airflow = "2.10.5"
python = "3.11.*"
Flask = "2.2.5"
SQLAlchemy = "1.4.54"
apache-airflow-providers-airbyte = "5.0.1"
apache-airflow-providers-alibaba = "3.0.1"
apache-airflow-providers-amazon = "9.4.0"
apache-airflow-providers-apache-cassandra = "3.7.1"
apache-airflow-providers-apache-spark = "5.1.1"
apache-airflow-providers-celery = "3.10.4"
apache-airflow-providers-cncf-kubernetes = "10.4.0"
apache-airflow-providers-databricks = "7.2.2"
apache-airflow-providers-datadog = "3.8.3"
apache-airflow-providers-dbt-cloud = "4.3.1"
apache-airflow-providers-slack = "9.0.3"
backoff = "2.2.1"
bcrypt = "4.3.0"
beautifulsoup4 = "4.13.3"
billiard = "4.2.1"
bitarray = "2.9.3"
black = "25.1.0"
boto3 = "1.37.1"
botocore = "1.37.1"
cassandra-driver = "3.29.2"
cattrs = "24.1.3"
celery = "5.5.0"
marshmallow-oneofschema = "3.1.1"
marshmallow-sqlalchemy = "0.28.2"
marshmallow = "3.26.1"
pandas-gbq = "0.28.0"
pandas = "2.1.4"
psycopg2-binary = "2.9.10"
redis = "5.2.1"
redshift-connector = "2.1.5"
requests-file = "2.1.0"
requests-kerberos = "0.15.0"
requests-mock = "1.12.1"
requests-ntlm = "1.3.0"
requests-oauthlib = "2.0.0"
requests-toolbelt = "1.0.0"
requests = "2.32.3"
responses = "0.25.7"
six = "1.17.0"
slack-sdk = "3.35.0"
tableauserverclient = "0.37"
unicodecsv = "0.14.1"
uritemplate = "4.1.1"
urllib3 = "2.3.0"
userpath = "1.9.1"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
coverage = "^6.1.1"
flake8 = "5.0.4"
flake8-black = "0.3.6"
jsonschema = "4.*"
mock = "^4.0.3"
moto = "2.*"
pytest = "^6.2.5"
pytest-coverage = "^0.0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
